SERVER-21845 Fix debug non-jit builds of spidermonkey